--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   </head>
 
   <body>
-    <eo-emotions id-nota="3231"></eo-emotions>
+    <eo-emotions id-nota="dsd2"></eo-emotions>
     <script type="module" src="/src/main.js"></script>
 
     <!-- <script type="module" src="https://especiales.elobservador.com.uy/interactivo/webcomponents/acordeon/eo-acordeon.js"></script> -->
